--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
             <div id="info">
                 <span class="arrow"></span>
                 <div>
-                    <p>Total Completed: <span></span></p>
-                    <p>Total Planned: <span></span></p>
-                    <p>Watching: <span></span></p>
-                    <p>Hours Watched: <span></span></p>
-                    <p>Episodes Watched: <span></span></p>
-                    <p>Mean Score: <span></span></p>
+                    <div class="info-items">
+                        <p>Total Completed: <span></span></p>
+                        <p>Total Planned: <span></span></p>
+                        <p>Watching: <span></span></p>
+                        <p>Hours Watched: <span></span></p>
+                        <p>Episodes Watched: <span></span></p>
+                        <p>Mean Score: <span></span></p>
+                    </div>
                 </div>
             </div>
         </div>
