removed count.js file

--- a/index.html
+++ b/index.html
@@ -59,6 +59,9 @@
 
 
 <!-- ================== TODO ================= -->
-<!-- Cover title font color should lighten -->
-<!-- animate info numbers to count -->
-<!-- footer color switch -->
+<!-- add a sorting thing with a url sort parameter -->
+<!-- make a user search page -->
+<!-- rediret to search page when no user is given -->
+<!-- make a manga version -->
+<!-- make a sort button -->
+<!-- make an anime and manga switch -->
