mobile sort option ui change, search page style changes

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 </div>
                 <div id="sort-options">
                     <div class="option-container">
-                        <h3 id="sort-recent" class="sort-option-btn">Most Recent</h3>
+                        <h3 id="sort-recent" class="sort-option-btn active">Most Recent</h3>
                         <h3 id="sort-alphabet" class="sort-option-btn">Alphabetically</h3>
                         <h3 id="sort-rating" class="sort-option-btn">Ratings</h3>
                         <h3 id="sort-popularity" class="sort-option-btn">Popularity</h3>
