seperated html content lists to grid view and list view, redid js element creation, edited anilist api calls to fit new fields, changed and added new scss rules to support both viewing options

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <div class="content desc sort-recent">
+    <div class="content desc sort-recent grid">
         <div class="settings-bar">
 
             <div class="sort-container">
@@ -159,3 +159,32 @@
 
 <!-- ================== TODO ================= -->
 <!-- desktop cover image hover info - format/rating -->
+
+
+<!-- <div>
+    <a href="" class="image">
+        <img src="" alt="">
+    </a>
+
+    <div class="info-grid">
+        <a href="" class="title"></a>
+    </div>
+
+    <div class="info-list">
+        <div class="info-header">
+            <h1 class="title"></h1>
+            <h1 class="studio"></h1>
+        </div>
+
+        <div class="info-footer">
+            <div class="rating"></div>
+            <div class="seperator"></div>
+            
+            <div class="more-info">
+                <h2 class="status"></h2>
+                <h2 class="format"></h2>
+                <h2 class="year"></h2>
+            </div>
+        </div>
+    </div>
+</div> -->
