cleaned up js and html a bit, moved images to seperate folder, renamed images with informative names, changed html image names

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 <!-- ================== TODO ================= -->
 <!-- desktop cover image hover info - format/rating -->
 
-
+<!-- ================== REFS ================= -->
 <!-- <div>
     <a href="" class="image">
         <img src="" alt="">
@@ -177,7 +177,13 @@
         </div>
 
         <div class="info-footer">
-            <div class="rating"></div>
+            <div class="rating">
+                <svg>
+                    <path></path>
+                </svg>
+                <h2></h2>
+            </div>
+
             <div class="seperator"></div>
             
             <div class="more-info">
