--- a/search.html
+++ b/search.html
@@ -44,13 +44,13 @@
 
         <div class="image-group">
             <div class="desk-image">
-                <img src="assets/imageedit_5_8738091191.jpg" alt="">
+                <img src="assets/images/gto.jpg" alt="">
             </div>
             <div class="desk-tab-image">
-                <img src="assets/output-onlinepngtools.png" alt="">
+                <img src="assets/images/tokyo_ghoul.png" alt="">
             </div>
             <div class="tab-image">
-                <img src="assets/ddddd.png" alt="">
+                <img src="assets/images/dragon-ball.png" alt="">
             </div>
         </div>
     </div>
