search page title and desc changes

--- a/search.html
+++ b/search.html
@@ -16,10 +16,10 @@
     <div class="content">
         <div class="header-group">
             <div class="title">
-                <h1>Hello!</h1>
+                <h1>Sup!</h1>
             </div>
             <div class="description">
-                <p>Show off your anime list with a bit of pazzaz</p>
+                <p>Show off your anime list with a touch of eye candy</p>
             </div>
             <div class="line"></div>
         </div>
