url parameter support, updated js to support url parameters

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </div>
     </div>
 
-    <div class="content desc sort-recent grid">
+    <div class="content">
         <div class="settings-bar">
 
             <div class="sort-container">
@@ -76,7 +76,7 @@
                 </div>
                 <div id="sort-options">
                     <div class="option-container">
-                        <h3 id="sort-recent" class="sort-option-btn active">Most Recent</h3>
+                        <h3 id="sort-recent" class="sort-option-btn">Most Recent</h3>
                         <h3 id="sort-alphabet" class="sort-option-btn">Alphabetically</h3>
                         <h3 id="sort-rating" class="sort-option-btn">Ratings</h3>
                         <h3 id="sort-popularity" class="sort-option-btn">Popularity</h3>
@@ -89,7 +89,7 @@
                 <div id="order-btn-icon" class="settings-bar-icon">
                     <p>Order</p>
                     <div id="order-svg-container">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512" class="active">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
                             <path d="M374.108,373.328c-7.829-7.792-20.492-7.762-28.284,0.067L276,443.557V20c0-11.046-8.954-20-20-20
                                 c-11.046,0-20,8.954-20,20v423.558l-69.824-70.164c-7.792-7.829-20.455-7.859-28.284-0.067c-7.83,7.793-7.859,20.456-0.068,28.285
                                 l104,104.504c0.006,0.007,0.013,0.012,0.019,0.018c7.792,7.809,20.496,7.834,28.314,0.001c0.006-0.007,0.013-0.012,0.019-0.018
@@ -109,7 +109,7 @@
                 <div id="view-btn-icon" class="settings-bar-icon">
                     <p>View</p>
                     <div id="view-svg-container">
-                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 271.673 271.673" class="active">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 271.673 271.673">
                             <path d="M114.939,0H10.449C4.678,0,0,4.678,0,10.449v104.49c0,5.771,4.678,10.449,10.449,10.449h104.49
                                 c5.771,0,10.449-4.678,10.449-10.449V10.449C125.388,4.678,120.71,0,114.939,0z"/>
                             <path d="M261.224,0h-104.49c-5.771,0-10.449,4.678-10.449,10.449v104.49c0,5.771,4.678,10.449,10.449,10.449h104.49
@@ -171,7 +171,7 @@
 <!-- ================== TODO ================= -->
 <!-- desktop cover image hover info - format/rating -->
 <!-- make site preferences premenant by using cookies or somethin -->
-
+<!-- make the url dynamic, as in change it when bts are clicked -->
 
 <!-- ================== REFS ================= -->
 <!-- <div>
