url parameter support for selectcard btns

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="name"></div>
             <div class="btn-container">
                 <button id="watching" class="btn">Watching</button>
-                <button id="completed" class="active btn">Completed</button>
+                <button id="completed" class="btn">Completed</button>
                 <button id="planning" class="btn">Planning</button>
             </div>
         </div>
@@ -139,7 +139,7 @@
         </div>
 
         <div id="watching" class="show-list"></div>
-        <div id="completed" class="show-list active"></div>
+        <div id="completed" class="show-list"></div>
         <div id="planning" class="show-list"></div>
     </div>
 
