--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-48JTJGZPX3"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-48JTJGZPX3');
+    </script>
+
+
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
@@ -170,9 +182,7 @@
 
 <!-- ================== TODO ================= -->
 <!-- desktop cover image hover info - format/rating -->
-<!-- make site preferences premenant by using cookies or somethin -->
-<!-- make the url dynamic, as in change it when bts are clicked -->
-
+<!-- make site preferences premanant by using cookies or somethin -->
 <!-- ================== REFS ================= -->
 <!-- <div>
     <a href="" class="image">
