--- a/search.html
+++ b/search.html
@@ -52,9 +52,9 @@
             <div class="tab-image">
                 <img src="assets/images/dragon-ball.png" alt="">
             </div>
-            <!-- <div class="mob-image">
+            <div class="mob-image">
                 <img src="assets/images/girl.png" alt="">
-            </div> -->
+            </div>
         </div>
     </div>
 
