--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     s9.138-1.715,12.563-5.137l177.87-171.307c43.588-43.583,65.38-86.41,65.38-128.475C511.626,128.288,499.537,95.552,475.366,71.951
                     z"/>
             </svg>
-        </span> by <a href="https://github.com/fire-walker" target="_blank">fire-walker</a></h2>
+        </span> by <a href="https://github.com/blekmus" target="_blank">blekmus</a></h2>
     </div>
 
 
